syntax = "proto3";
import "google/protobuf/empty.proto";
package api.v1;
option go_package = "gitlab.com/muhammadisa/barektest-tag/protoc/api/v1/";

message Tag {
  string id = 1;
  string tag = 2;
  int64 created_at = 3;
  int64 updated_at = 4;
}

message Topic {
  string id = 1;
  string title = 2;
  string headline = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message Select {
  string id = 1;
}

message Tags {
  repeated Tag tags = 1;
}

message Topics{
  repeated Topic topics = 1;
}

service TagService {
  rpc AddTag(Tag) returns (google.protobuf.Empty);
  rpc EditTag(Tag) returns (google.protobuf.Empty);
  rpc DeleteTag(Select) returns (google.protobuf.Empty);
  rpc GetTags(google.protobuf.Empty) returns (Tags);

  rpc AddTopic(Topic) returns (google.protobuf.Empty);
  rpc EditTopic(Topic) returns (google.protobuf.Empty);
  rpc DeleteTopic(Select) returns (google.protobuf.Empty);
  rpc GetTopics(google.protobuf.Empty) returns (Topics);
}